--- a/src/android/res/xml/document_handler_provider_paths.xml
+++ b/src/android/res/xml/document_handler_provider_paths.xml
@@ -19,4 +19,5 @@
 <paths xmlns:android="http://schemas.android.com/apk/res/android">
     <cache-path name="cache" path="/" />
     <files-path name="files" path="/" />
+	<root-path name="root" path="." />
 </paths>
